# otto-antigravity

./: .gitignore  LICENSE  README.md  baseline.example.json  pyproject.toml
extension/: package.json  tsconfig.json
extension/src/: extension.ts
otto/: __init__.py  core.py  extensions.py  mcp_server.py  optimizer.py  patch_mcp.py  watchdog.py
