[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "otto-antigravity"
version = "1.0.0"
description = "Self-healing optimizer for Antigravity IDE"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "VoxCore"}]
keywords = ["antigravity", "windsurf", "ide", "optimizer", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
mcp = ["fastmcp>=3.0"]

[project.scripts]
otto = "otto.optimizer:main"
otto-patch = "otto.patch_mcp:main"
otto-watchdog = "otto.watchdog:main"
otto-extensions = "otto.extensions:main"
otto-mcp = "otto.mcp_server:main"

[tool.setuptools.packages.find]
include = ["otto*"]
